--- a/OsmAnd/res/values/strings.xml
+++ b/OsmAnd/res/values/strings.xml
@@ -12,6 +12,7 @@
 -->
 
     <string name="any_connected">Any connected</string>
+    <string name="any_connected_with_device">Any connected: %s</string>
     <string name="complex_widget_alert">%1$s widget can only be placed on its own row.</string>
     <string name="previous_row_has_complex_widget">Previous row has complex widget</string>
     <string name="shared_string_next_event">Next event</string>
