--- a/OsmAnd/res/values/strings.xml
+++ b/OsmAnd/res/values/strings.xml
@@ -10,6 +10,7 @@
 	- For wording and consistency, please note https://docs.osmand.net/docs/technical/contributions/translating-osmand
 	Thx - Hardy
 -->
+    <string name="ltr_or_rtl_combine_with_brackets">%1$s (%2$s)</string>
     <string name="precise_distance_numbers">Precise distance numbers</string>
     <string name="any_connected">Any connected</string>
     <string name="any_connected_with_device">Any connected: %s</string>
