--- a/OsmAnd/res/values/strings.xml
+++ b/OsmAnd/res/values/strings.xml
@@ -25,10 +25,10 @@
     <string name="previous_row_has_complex_widget">Previous row has complex widget</string>
     <string name="shared_string_road_maps">Road maps</string>
     <string name="shared_string_next_event">Next event</string>
-    <string name="map_widget_sun_position_desc">This widget shows the time until sunrise or sunset, depending on the current time.</string>
+    <string name="map_widget_sun_position_desc">Shows the time until sunrise or sunset.</string>
     <string name="map_widget_sun_position">Sun position</string>
-    <string name="use_v1_auto_zoom">Discrete auto zoom (old version)</string>
-    <string name="button_already_assigned_to_this_action">This button is already assigned to this action.</string>
+    <string name="use_v1_auto_zoom">Discrete auto-zoom (old version)</string>
+    <string name="button_already_assigned_to_this_action">Button already assigned to this action.</string>
     <string name="key_assignments_already_cleared_message">All key assignments are already cleared</string>
     <string name="add_new_button">Add a new button</string>
     <string name="zoom_animated">Animated zoom</string>
@@ -41,7 +41,7 @@
     <string name="target_elevation">Target elevation</string>
     <string name="shared_string_eta">ETA</string>
     <string name="topography_maps">Topography maps</string>
-    <string name="clear_key_assignment_desc">Key binding for the selected action will be cleared and set to None.</string>
+    <string name="clear_key_assignment_desc">Key binding for the selected action will be cleared and set to \"None\".</string>
     <string name="clear_key_assignment">Clear key assignment</string>
     <string name="key_assignments">Key assignments</string>
     <string name="see_all_plans">See all plans</string>
@@ -50,7 +50,7 @@
     <string name="remove_widget_first">Please remove widget first</string>
     <string name="add_row">Add row</string>
     <string name="row_number">Row %1$s</string>
-    <string name="discard_changes_prompt">Are you sure you want to discard changes?</string>
+    <string name="discard_changes_prompt">Discard changes?</string>
     <string name="change_button">Change button</string>
     <string name="download_to_device">Download to device</string>
     <string name="deletion_error">Deletion error</string>
@@ -80,7 +80,7 @@
     <string name="key_event_action_open_navigation_view">Open Navigation view</string>
     <string name="key_event_action_change_map_orientation">Change Map orientation</string>
     <string name="key_event_action_move_to_my_location">Move to My location</string>
-    <string name="remove_type_q">Are you sure you want to remove \"%1$s\" type?</string>
+    <string name="remove_type_q">Remove \"%1$s\" type?</string>
     <string name="add_new_type">Add new type</string>
     <string name="enable_to_use_external_input_device">Enable to use external input device with OsmAnd</string>
     <string name="key_bindings">Key bindings</string>
@@ -89,10 +89,10 @@
     <string name="cloud_item_restored">%1$s is restored into Cloud.</string>
     <string name="shared_string_is_deleted">%1$s is deleted.</string>
     <string name="shared_string_delete_item">Delete item</string>
-    <string name="delete_trash_item_confirmation_desc">\"%1$s\" will be deleted permanently. Are you sure?\n\nThis action can\'t be undone.</string>
+    <string name="delete_trash_item_confirmation_desc">Delete \"%1$s\" permanently?</string>
     <string name="shared_string_delete_immediately">Delete immediately</string>
     <string name="restore_from_trash">Restore from trash</string>
-    <string name="cloud_trash_clear_confirmation">Are you sure you want to permanently delete all items in the Trash? This action can\'t be undone.</string>
+    <string name="cloud_trash_clear_confirmation">Delete all items in trash permanently?</string>
     <string name="delete_all_items">Delete all items</string>
     <string name="shared_string_empty_trash">Empty trash</string>
     <string name="trash_alert_card_desc">Items in trash will be erased after %1$s days.</string>
@@ -112,11 +112,11 @@
     <string name="searching_matching_tracks">Search all matching tracks</string>
     <string name="configure_filter">Configure filter</string>
     <string name="no_config_smart_folder_title">Not configured</string>
-    <string name="no_config_smart_folder_description">Smart folders allow to group tracks by applied filters</string>
+    <string name="no_config_smart_folder_description">Smart folders allow grouping tracks by applied filters</string>
     <string name="empty_smart_folder_title">No matching track</string>
-    <string name="empty_smart_folder_description">All matching tracks will automatically appear here</string>
+    <string name="empty_smart_folder_description">Matching tracks appear here</string>
     <string name="discard_filter_changes">Discard filter changes</string>
-    <string name="discard_filter_changes_prompt">Are you sure you want to reset all filters?</string>
+    <string name="discard_filter_changes_prompt">Reset all filters?</string>
     <string name="smart_folder_saved">Smart Folder saved</string>
     <string name="edit_filter">Edit filter</string>
     <string name="delete_smart_folder_dialog_message">This will delete \"%1$s\" smart folder.</string>
@@ -132,7 +132,7 @@
     <string name="sort_size_descending">Large size first</string>
     <string name="sort_country_name_ascending">Country name: A – Z</string>
     <string name="sort_country_name_descending">Country name: Z – A</string>
-    <string name="delete_map_description">Are you sure you want to delete %1$s map?</string>
+    <string name="delete_map_description">Delete %1$s map?</string>
     <string name="delete_map">Delete map</string>
     <string name="map_is_up_to_date">%1$s map is up to date.</string>
     <string name="shared_string_cache">Cache</string>
@@ -322,7 +322,7 @@
     <string name="folder_export_empty_error">Nothing to export, folder is empty</string>
     <string name="osmand_cloud_deleted_account_descr">Account and all data was deleted from OsmAnd Cloud.</string>
     <string name="osmand_cloud_deleting_account_descr">In few moments all your data and account will be deleted from OsmAnd Cloud.\n\nAll data on the device remain untouched.</string>
-    <string name="osmand_cloud_delete_account_confirmation_descr">Are you sure you want to delete OsmAnd Cloud account?\n\nThis action can’t be undone.</string>
+    <string name="osmand_cloud_delete_account_confirmation_descr">Delete OsmAnd Cloud account?\n\nThis action can’t be undone.</string>
     <string name="osmand_cloud_delete_account_confirmation">Delete account?</string>
     <string name="action_cannot_be_undone">This action can\'t be undone.</string>
     <string name="osmand_cloud_deletion_secondary_devices_warning">Secondary devices will be logged off from OsmAnd Cloud and lose access to paid features.</string>
@@ -330,9 +330,9 @@
     <string name="osmand_cloud_deletion_all_data_warning">All data from OsmAnd Cloud will be %1$s. Data on the device remains untouched.</string>
     <string name="osmand_cloud_deletion_subscriptions_warning">This will not cancel your OsmAnd Pro subscription.</string>
     <string name="manage_subscriptions">Manage subscriptions.</string>
-    <string name="delete_account_warning">Are you sure you want to delete %1$s account?</string>
+    <string name="delete_account_warning">Delete %1$s account?</string>
     <string name="shared_string_deleting">Deleting</string>
-    <string name="deleting_complete">Deleting complete</string>
+    <string name="deleting_complete">Deletion complete</string>
     <string name="delete_account">Delete account</string>
     <string name="backup_error_delete_account_email_match">Email doesn\'t match login username</string>
     <string name="verify_account_deletion_descr">We need to verify your account before delete it.\n\nPlease enter the e-mail address you registered with. A one-time password for the next step will be sent to it.</string>
@@ -400,7 +400,7 @@
     <string name="is_imported">%1$s is imported.</string>
     <string name="file_already_exists_description">\"%1$s\". A file with that name already exists. Replace will overwrite all changes made with the current version.</string>
     <string name="file_already_exists">File already exists</string>
-    <string name="nav_profile_confirm_delete">Are you sure you want to delete \"%1$s\"?</string>
+    <string name="nav_profile_confirm_delete">Delete \"%1$s\"?</string>
     <string name="external_device_low_battery">Low battery</string>
     <string name="external_device_forget_sensor">Forget sensor</string>
     <string name="external_device_forget_sensor_description">Sensor will be removed from the list.
@@ -769,7 +769,7 @@ You need to activate the sensor so OsmAnd can find it.</string>
     <string name="distance_by_tap_use_description">Tap on map to view distance between your current location and tapped point.\nTap with 2 fingers on the map to view distance between the clicked points</string>
     <string name="display_position">Display position</string>
     <string name="download_heightmap_maps">Heightmap</string>
-    <string name="favorite_confirm_delete_group">Are you sure you want to delete \"%1$s\" group and all included points (%2$d)?</string>
+    <string name="favorite_confirm_delete_group">Delete \"%1$s\" group and all included points (%2$d)?</string>
     <string name="favorite_delete_group">Delete Group</string>
     <string name="available_as_part_of_subscription_plan">Available as part of the %1$s subscription.</string>
     <string name="included_in_your_current_plan">Included in your current \"%1$s\" plan</string>
