--- a/OsmAnd/res/values/strings.xml
+++ b/OsmAnd/res/values/strings.xml
@@ -240,7 +240,7 @@
     <string name="help_article_widgets_radius_ruler_name">Radius-ruler and Ruler</string>
     <string name="shared_string_setup">Setup</string>
     <string name="user_guide">User guide</string>
-    <string name="telegram_chats_descr">Join to one of our local telegram chats.</string>
+    <string name="telegram_chats_descr">Join one of our local Telegram chats.</string>
     <string name="telegram_chats">Telegram chats</string>
     <string name="github_discussion">GitHub Discussion</string>
     <string name="contact_us">Contact us</string>
@@ -2970,10 +2970,10 @@ You need to activate the sensor so OsmAnd can find it.</string>
     <string name="nearest_cities">Nearest cities</string>
     <string name="select_city">Select city</string>
     <string name="select_postcode">Postcode search</string>
-    <string name="quick_action_auto_zoom">Auto zoom map on/off</string>
-    <string name="quick_action_auto_zoom_desc">Button to turn speed controlled auto zoom on or off.</string>
-    <string name="quick_action_auto_zoom_on">Turn on auto zooming</string>
-    <string name="quick_action_auto_zoom_off">Turn off auto zooming</string>
+    <string name="quick_action_auto_zoom">Auto-zoomed map on/off</string>
+    <string name="quick_action_auto_zoom_desc">Button to turn speed-controlled auto-zooming on or off.</string>
+    <string name="quick_action_auto_zoom_on">Turn on auto-zooming</string>
+    <string name="quick_action_auto_zoom_off">Turn off auto-zooming</string>
     <string name="quick_action_add_destination">Set destination</string>
     <string name="quick_action_replace_destination">Replace destination</string>
     <string name="quick_action_add_first_intermediate">Add first intermediate</string>
@@ -4091,7 +4091,7 @@ Download tile maps directly, or copy them as SQLite database files to OsmAnd\'s 
     <string name="animate_routing_route">Simulate using calculated route</string>
     <string name="animate_routing_gpx">Simulate using GPX track</string>
     <string name="route_is_too_long_v2">For long distances: Please add intermediate destinations if no route is found within 10 minutes.</string>
-    <string name="auto_zoom_none">No auto zoom</string>
+    <string name="auto_zoom_none">No auto-zooming</string>
     <string name="auto_zoom_close">To close-up</string>
     <string name="auto_zoom_far">To mid-range</string>
     <string name="auto_zoom_farthest">To long-range</string>
@@ -4322,7 +4322,7 @@ Download tile maps directly, or copy them as SQLite database files to OsmAnd\'s 
     <string name="use_compass_navigation">Use compass</string>
     <string name="avoid_motorway">No motorways</string>
     <string name="auto_zoom_map_descr">Zoom level according to your speed (while map is synchronized with current position).</string>
-    <string name="auto_zoom_map">Auto zoom map</string>
+    <string name="auto_zoom_map">Auto-zoomed map</string>
     <string name="snap_to_road">Snap to road</string>
     <string name="interrupt_music_descr">Voice prompts pause music playback.</string>
     <string name="interrupt_music">Pause music</string>
