Add "Battery optimization" preference on the "Trip recording" screen

--- a/OsmAnd/res/values/strings.xml
+++ b/OsmAnd/res/values/strings.xml
@@ -11,9 +11,10 @@
 	Thx - Hardy
 -->
 
+    <string name="battery_optimization_banner_content">Android battery optimization can cause gaps and inaccuracies in recorded tracks.</string>
     <string name="dont_ask_anymore">Don\'t ask anymore</string>
     <string name="battery_optimization_settings">Battery optimization settings</string>
-    <string name="battery_optimization_desc">Battery optimisation in Android can cause gaps and inaccuracies in recorded tracks.\n\nIf you experience any of these issues, you can try changing the battery usage to \'Unrestricted.\'</string>
+    <string name="battery_optimization_desc">Battery optimization in Android can cause gaps and inaccuracies in recorded tracks.\n\nIf you experience any of these issues, you can try changing the battery usage to \'Unrestricted.\'</string>
     <string name="battery_optimization">Battery optimization</string>
     <string name="shared_string_extensions">Extensions</string>
     <string name="shared_string_license">License</string>
