--- a/OsmAnd/res/values/strings.xml
+++ b/OsmAnd/res/values/strings.xml
@@ -11,6 +11,12 @@
 	Thx - Hardy
 -->
 
+    <string name="rendering_attr_padusDisplayMode_name">Public lands display mode</string>
+    <string name="rendering_attr_padusDisplayMode_description">By access type or manager name</string>
+    <string name="rendering_value_access_name">By access type</string>
+    <string name="rendering_value_managerName_name">By manager name</string>
+    <string name="rendering_attr_padusHideBoundaries_name">Hide public land boundaries</string>
+    <string name="rendering_attr_padusHideBoundaries_description">Hide public land boundaries but leave areas</string>
     <string name="speed_limit_warning">Speed limit warning</string>
     <string name="shared_string_limit">Limit</string>
     <string name="when_exceeded">When exceeded</string>
