--- a/OsmAnd/res/values/strings.xml
+++ b/OsmAnd/res/values/strings.xml
@@ -26,7 +26,7 @@
     <string name="add_button">Add button</string>
     <string name="custom_buttons">Custom buttons</string>
     <string name="default_buttons">Default buttons</string>
-    <string name="sorted_sufolders_toast">Subfolders in “%1$s” is sorted by: “%2$s”</string>
+    <string name="sorted_sufolders_toast">Subfolders in “%1$s” are sorted by: “%2$s”</string>
     <string name="sort_subfolders">Sort subfolders</string>
     <string name="shared_string_activity">Activity</string>
     <string name="shared_string_keywords">Keywords</string>
